--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,60 @@
 .main-header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .main-article {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.highlight {
+  display: flex;
+  flex-direction: row;
 }
 
 container-banner {
-    flex: 1;
+  flex: 1;
 }
 
 .main-navbar {
-    display: flex;
-    padding: 10px;
+  display: flex;
+  padding: 10px;
 }
 
 .navbar {
-    color: black;
-    text-decoration: none;
-    border: 1px solid;
-    padding: 10px;
+  color: black;
+  text-decoration: none;
+  border: 1px solid;
+  padding: 10px;
 }
 
 .main-article-header {
-    text-align: center;
+  text-align: center;
 }
 
-header, main {
-    margin: 32px;
+header,
+main {
+  margin: 32px;
 }
 
 .banner-autoslide {
-    height: 250px;
-    background-image: url(https://picsum.photos/500);
-    background-position: center;
-    background-size: cover;
+  height: 250px;
+  background-image: url(https://picsum.photos/500);
+  background-position: center;
+  background-size: cover;
 }
 
 .our-package-header {
-    text-align: center;
+  text-align: center;
 }
 
 .package-deals-content {
-    text-align: center;
+  text-align: center;
 }
 
 footer {
-    text-align: center;
+  text-align: center;
 }
